--- a/index.html
+++ b/index.html
@@ -37,6 +37,52 @@
         <div class="hero-background"></div>
     </section>
 
+    <!-- スポンサーセクション（ホーム用・横スクロール） -->
+    <section id="sponsors" class="sponsors-section home-sponsors">
+        <div class="container">
+            <h2>メンバー</h2>
+            <p class="sponsor-sub">Ruler e-sports のメンバー</p>
+
+            <div class="sponsors-carousel" aria-label="メンバーのロゴ一覧">
+                <div class="sponsors-track">
+                    <div class="sponsor-card">
+                        <div class="sponsor-logo"><img src="sponsors/IMG_0075.jpg" alt="オーナー"></div>
+                        <div class="sponsor-name">オーナー</div>
+                    </div>
+                    <div class="sponsor-card">
+                        <div class="sponsor-logo"><img src="sponsors/tech.png" alt="副代表"></div>
+                        <div class="sponsor-name">副代表</div>
+                    </div>
+                    <div class="sponsor-card">
+                        <div class="sponsor-logo"><img src="sponsors/company.png" alt="大活躍メンバー"></div>
+                        <div class="sponsor-name">大活躍メンバー</div>
+                    </div>
+                    <div class="sponsor-card">
+                        <div class="sponsor-logo"><img src="sponsors/premium.png" alt="育成代表"></div>
+                        <div class="sponsor-name">育成代表</div>
+                    </div>
+                    <!-- 同じカードを複製してシームレススクロールを作る -->
+                    <div class="sponsor-card">
+                        <div class="sponsor-logo"><img src="sponsors/IMG_0075.jpg" alt="オーナー"></div>
+                        <div class="sponsor-name">オーナー</div>
+                    </div>
+                    <div class="sponsor-card">
+                        <div class="sponsor-logo"><img src="sponsors/tech.png" alt="副代表"></div>
+                        <div class="sponsor-name">副代表</div>
+                    </div>
+                    <div class="sponsor-card">
+                        <div class="sponsor-logo"><img src="sponsors/company.png" alt="大活躍メンバー"></div>
+                        <div class="sponsor-name">大活躍メンバー</div>
+                    </div>
+                    <div class="sponsor-card">
+                        <div class="sponsor-logo"><img src="sponsors/premium.png" alt="育成代表"></div>
+                        <div class="sponsor-name">育成代表</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section id="about" class="about">
 
         <div class="container">
@@ -139,10 +185,5 @@
     </footer>
 
     <script src="script.js"></script>
-</body>
-</html>
-
-  <!-- Firebase連携用スクリプト -->
-  <script type="module" src="./script.js"></script>
 </body>
 </html>
