--- a/index.html
+++ b/index.html
@@ -46,36 +46,36 @@
             <div class="sponsors-carousel" aria-label="メンバーのロゴ一覧">
                 <div class="sponsors-track">
                     <div class="sponsor-card">
-                        <div class="sponsor-logo"><img src="sponsors/IMG_0075.jpg" alt="オーナー"></div>
+                        <div class="sponsor-logo"><img src="IMG_0075.jpg" alt="オーナー"></div>
                         <div class="sponsor-name">オーナー</div>
                     </div>
                     <div class="sponsor-card">
-                        <div class="sponsor-logo"><img src="sponsors/tech.png" alt="副代表"></div>
+                        <div class="sponsor-logo"><img src="tech.png" alt="副代表"></div>
                         <div class="sponsor-name">副代表</div>
                     </div>
                     <div class="sponsor-card">
-                        <div class="sponsor-logo"><img src="sponsors/company.png" alt="大活躍メンバー"></div>
+                        <div class="sponsor-logo"><img src="company.png" alt="大活躍メンバー"></div>
                         <div class="sponsor-name">大活躍メンバー</div>
                     </div>
                     <div class="sponsor-card">
-                        <div class="sponsor-logo"><img src="sponsors/premium.png" alt="育成代表"></div>
+                        <div class="sponsor-logo"><img src="premium.png" alt="育成代表"></div>
                         <div class="sponsor-name">育成代表</div>
                     </div>
                     <!-- 同じカードを複製してシームレススクロールを作る -->
                     <div class="sponsor-card">
-                        <div class="sponsor-logo"><img src="sponsors/IMG_0075.jpg" alt="オーナー"></div>
+                        <div class="sponsor-logo"><img src="IMG_0075.jpg" alt="オーナー"></div>
                         <div class="sponsor-name">オーナー</div>
                     </div>
                     <div class="sponsor-card">
-                        <div class="sponsor-logo"><img src="sponsors/tech.png" alt="副代表"></div>
+                        <div class="sponsor-logo"><img src="tech.png" alt="副代表"></div>
                         <div class="sponsor-name">副代表</div>
                     </div>
                     <div class="sponsor-card">
-                        <div class="sponsor-logo"><img src="sponsors/company.png" alt="大活躍メンバー"></div>
+                        <div class="sponsor-logo"><img src="company.png" alt="大活躍メンバー"></div>
                         <div class="sponsor-name">大活躍メンバー</div>
                     </div>
                     <div class="sponsor-card">
-                        <div class="sponsor-logo"><img src="sponsors/premium.png" alt="育成代表"></div>
+                        <div class="sponsor-logo"><img src="premium.png" alt="育成代表"></div>
                         <div class="sponsor-name">育成代表</div>
                     </div>
                 </div>
