--- a/index.html
+++ b/index.html
@@ -6,24 +6,27 @@
     <title>Ruler e-sports</title>
     <link rel="stylesheet" href="styles.css">
     <meta name="description" content="このサイトはRuler e-sportsの公式サイトです。">
-    <link rel="icon" type="JPG" sizes="32x32" href="/IMG_6776.JPG">
-    <link rel="icon" type="JPG" sizes="16x16" href="/IMG_6776.JPG">
-    <link rel="apple-touch-icon" sizes="180x180" href="/IMG_6776.JPG">
+
+    <!-- ファビコン修正版 -->
+    <link rel="icon" type="image/png" sizes="32x32" href="IMG_6776.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="IMG_6776.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="IMG_6776.png">
+
+    <!-- OGP / Twitter -->
     <meta property="og:title" content="Ruler e-sports">
     <meta property="og:description" content="このサイトはRuler e-sportsの公式サイトです。">
-    <meta property="og:image" content="/IMG_6776.JPG">
+    <meta property="og:image" content="IMG_6776.png">
     <meta property="og:url" content="https://rule-e-sports.github.io/Ruler-E-sports/">
     <meta property="og:type" content="website">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Ruler e-sports">
     <meta name="twitter:description" content="このサイトはRuler e-sportsの公式サイトです。">
-    <meta name="twitter:image" content="/IMG_6776.JPG">
-    <meta name="robots" content="index, follow">
+    <meta name="twitter:image" content="IMG_6776.png">
 
+    <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://rule-e-sports.github.io/Ruler-E-sports/">
     <meta name="author" content="Ruler e-sportsオーナーWhite">
-
 </head>
 <body>
     <!-- ナビゲーションバー -->
